--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-	<string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey">deployment-key-here</string>
+	<string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey">OerpoxP1xpJX0gWqppt9GtbFXj31XfxNfx_nm</string>
     <string name="app_name">Show da Fé Streaming</string>
 </resources>
